# calibration_toolkit

./: LICENSE.md  README.md  ceres.patch  ceres_install.sh  doxygen.cfg
calibration_algorithms/: CMakeLists.txt  package.xml
calibration_algorithms/include/calibration_algorithms/: checkerboard_corners_extraction.h  checkerboard_extraction.h  plane_fit.h  plane_to_plane_calibration.h
calibration_algorithms/include/impl/calibration_algorithms/: plane_fit.hpp
calibration_algorithms/src/calibration_algorithms/: checkerboard_corners_extraction.cpp  checkerboard_extraction.cpp  plane_to_plane_calibration.cpp
calibration_algorithms/test/: test_calibration_algorithms.cpp  test_plane_to_plane_calibration.cpp
calibration_common/: CMakeLists.txt  package.xml
calibration_common/include/calibration_common/: calibration_common.h
calibration_common/include/calibration_common/algorithms/: algorithms.h  automatic_checkerboard_finder.h  checkerboard_finder.h  interactive_checkerboard_finder.h  plane_extraction.h  plane_extractor.h  plane_to_plane_calibration.h  point_on_plane_calibration.h
calibration_common/include/calibration_common/base/: base.h  definitions.h  eigen_bugfix.h  eigen_cloud.h  geometry.h  math.h  matrix.h  opencv_conversion.h  opencv_eigen_conversions.h  pcl_conversion.h  point_matrix.h  polynomial.h  traits.h
calibration_common/include/calibration_common/ceres/: ceres.h  math.h  plane_fit.h  polynomial_fit.h
calibration_common/include/calibration_common/color/: camera_model.h  color.h  sensor.h  view.h
calibration_common/include/calibration_common/depth/: camera_model.h  depth.h  sensor.h  traits.h  undistortion_model.h  undistortion_model_fit.h  view.h
calibration_common/include/calibration_common/objects/: base_object.h  checkerboard.h  globals.h  objects.h  planar_object.h  sensor.h  view.h  with_points.h
calibration_common/include/calibration_common/pcl/: pcl.h  utils.h
calibration_common/include/calibration_common/pinhole/: camera_model.h  pinhole.h  sensor.h  view.h
calibration_common/include/calibration_common/rgbd/: data.h
calibration_common/include/impl/calibration_common/algorithms/: plane_extraction.hpp  plane_extractor.hpp
calibration_common/include/impl/calibration_common/base/: opencv_conversion.hpp  pcl_conversion.hpp
calibration_common/src/calibration_common/algorithms/: automatic_checkerboard_finder.cpp  interactive_checkerboard_finder.cpp  plane_to_plane_calibration.cpp  point_on_plane_calibration.cpp
calibration_common/src/calibration_common/objects/: base_object.cpp  checkerboard.cpp  planar_object.cpp
calibration_common/src/calibration_common/pinhole/: camera_model.cpp
calibration_common/src/calibration_common/rgbd/: data.cpp
calibration_common/test/: test_calibration_common.cpp
calibration_common/test/base/: base_object_test.cpp  checkerboard_test.cpp  matrix_test.cpp  opencv_conversion_test.cpp  run_tests.cpp  sensor_test.cpp  test_opencv_eigen_conversions.cpp  test_polynomial.cpp
calibration_common/test/objects/: test_checkerboard.cpp
calibration_common/test/pinhole/: test_camera_model.cpp
calibration_msgs/: CMakeLists.txt  package.xml
calibration_msgs/action/: CheckerboardExtraction.action
calibration_msgs/include/calibration_msgs/: calibration_common_conversions.h
calibration_msgs/msg/: CalibrationPose.msg  Checkerboard.msg  CheckerboardArray.msg  CheckerboardCornersView.msg  CheckerboardDepthView.msg  CheckerboardMsg.msg  OmnicameraInfo.msg  Point2DArray.msg  PointArray.msg  Polynomial.msg
calibration_msgs/src/calibration_msgs/: calibration_common_conversions.cpp
calibration_msgs/srv/: GetCalibrationResults.srv  GetDeviceInfo.srv  SetOmnicameraInfo.srv
calibration_pcl/: CMakeLists.txt  package.xml
calibration_pcl/include/calibration_pcl/base/: base.h  definitions.h  pcl_eigen_conversions.h
calibration_pcl/include/calibration_pcl/depth/: view.h
calibration_pcl/include/calibration_pcl/utilities/: plane_extraction.h  point_plane_extraction.h  point_plane_extraction_gui.h
calibration_pcl/test/: test_calibration_pcl.cpp
calibration_pcl/test/base/: test_pcl_eigen_conversions.cpp
calibration_ros/: CMakeLists.txt  package.xml
calibration_ros/include/calibration_ros/devices/: ros_device.h
calibration_ros/include/calibration_ros/sensors/: depth_sensor.h  pinhole_camera.h  ros_sensor.h
calibration_ros/include/calibration_ros/visualization/: objects.h
calibration_ros/src/calibration_ros/devices/: ros_device.cpp
calibration_ros/src/calibration_ros/sensors/: depth_sensor.cpp  pinhole_camera.cpp
calibration_ros/src/calibration_ros/visualization/: objects.cpp
calibration_toolkit/: CMakeLists.txt  package.xml
calibration_toolkit/scripts/: install_ceres.sh
kinect/: CMakeLists.txt  package.xml
kinect/include/kinect/depth/: camera_model.h  depth.h  polynomial_function.h  polynomial_function_fit.h  polynomial_matrix.h  polynomial_matrix_fit.h  polynomial_matrix_io.h  polynomial_matrix_model.h  polynomial_undistortion_function.h  polynomial_undistortion_function_fit.h  polynomial_undistortion_matrix.h  polynomial_undistortion_matrix_fit.h  polynomial_undistortion_matrix_io.h  sensor.h  two_steps_model.h  two_steps_undistortion.h  undistortion_model.h
kinect/test/: polynomial_matrix_io-test.cpp  read_write_test.cpp
multisensor_calibration/: CMakeLists.txt  package.xml
multisensor_calibration/conf/: checkerboard.yaml  example.yaml  network.yaml  pointgrey_camera_default.yaml
multisensor_calibration/include/multisensor_calibration/: calibration.h  common.h  device_node.h  master_node.h  optimization.h
multisensor_calibration/include/multisensor_calibration/corner_based/: errors.h  plane_errors.h
multisensor_calibration/launch/: camera_node.launch  kinect1.launch  kinect1_node.launch  kinect2.launch  kinect2_bridge.launch  kinect2_rgb.launch  master_node.launch  multisensor_calibration.launch  pg_camera.launch  pg_camera_old.launch
multisensor_calibration/src/multisensor_calibration/: calibration.cpp  device_node.cpp  master_node.cpp  optimization.cpp
(+13 files in other folders)
