<?xml version="1.0"?>
<package format="2">

  <name>calibration_msgs</name>
  <version>1.0.0</version>
  <description>
    The calibration_msgs package
  </description>
  <maintainer email="bassofil@gmail.com">Filippo Basso</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/calibration_msgs</url> -->
  <!-- <author email="bassofil@gmail.com">Filippo Basso</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>calibration_common</depend>
  <depend>eigen_conversions</depend>

  <export>
  </export>

</package>
