<?xml version="1.0"?>
<package>
  <name>calibration_toolkit</name>
  <version>1.0.0</version>
  <description>ROS calibration toolkit package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bassofil@dei.unipd.it">Filippo Basso</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/calibration</url> -->

  <author email="bassofil@dei.unipd.it">Filippo Basso</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
