<?xml version="1.0"?>
<package>
  <name>calibration_toolkit</name>
  <version>1.0.0</version>
  <description>The calibration_toolkit package</description>
  <maintainer email="bassofil@gmail.com">Filippo Basso</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
